--- a/app/src/main/res/layout-xlarge/activity_create_room.xml
+++ b/app/src/main/res/layout-xlarge/activity_create_room.xml
@@ -16,8 +16,7 @@
         android:id="@+id/imageView2"
         android:layout_width="768dp"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/_gas_pump"/>
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
