--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -32,121 +32,174 @@
 
     </TableRow>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/create_event_img"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/_xlarge_icons_100"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <View style="@style/Divider"/>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/_vis"/>
-
-            <Switch
-                android:id="@+id/switch_public"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:checked="true"
-                android:gravity="center"
-                android:textOff="Private"
-                android:textOn="Public"/>
-
-        </TableRow>
-
-        <View style="@style/Divider"/>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/_dt"/>
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:baselineAligned="false"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:layout_height="match_parent">
 
-                <!--<com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+                <android.support.v7.widget.AppCompatImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:picker_curved="true"
-                    app:picker_cyclic="true"
-                    app:picker_visibleItemCount="4"
-                    android:id="@+id/time_picker"/>-->
+                    app:srcCompat="@drawable/_edit_image"
+                    android:id="@+id/tr_createRm_rmImg"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"/>
 
-            </LinearLayout>
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/create_event_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:foregroundGravity="center"
+                    app:srcCompat="@drawable/_xlarge_icons_100"
+                    android:paddingBottom="10dp" />
 
-        </TableRow>
+            </RelativeLayout>
 
-        <View style="@style/Divider"/>
+            <View style="@style/Divider"/>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/_edit"/>
+                android:layout_marginBottom="15dp">
 
-            <EditText
-                android:id="@+id/txt_details"
-                android:layout_width="wrap_content"
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/img_createRm_vis"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/_vis"/>
+
+                <Switch
+                    android:id="@+id/switch_public"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:checked="true"
+                    android:gravity="center"
+                    android:textOff="Private"
+                    android:textOn="Public"/>
+
+            </TableRow>
+
+            <View style="@style/Divider"/>
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="top|left"
-                android:hint="Details\n\n"
-                android:inputType="textMultiLine"/>
+                android:layout_marginBottom="15dp">
 
-        </TableRow>
+                <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/_dt"
+                    android:id="@+id/img_createRm_dates" />
 
-        <View style="@style/Divider"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal"
+                    android:weightSum="1"
+                    android:layout_weight="1">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
 
-            <ImageButton
-                android:id="@+id/btn_mom_done"
-                android:layout_width="wrap_content"
+                        <TextView
+                            android:text="From"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:text="TextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/txt_createRm_from"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:text="Till"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView2" />
+
+                    <TextView
+                        android:text="TextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/txt_createRm_till" />
+                </LinearLayout>
+
+            </TableRow>
+
+            <View style="@style/Divider"/>
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/_ok"/>
+                android:layout_marginBottom="15dp">
 
-        </TableRow>
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/_edit"/>
 
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/txt_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="top|left"
+                    android:hint="Details\n\n"
+                    android:inputType="textMultiLine"/>
+
+            </TableRow>
+
+            <View style="@style/Divider"/>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <ImageButton
+                    android:id="@+id/btn_mom_done"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="false"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/_checked100"/>
+
+            </TableRow>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
