--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,7 +54,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/home_feed_fragment"></LinearLayout>
+        android:id="@+id/home_feed_fragment" />
 
 
 </LinearLayout>
