--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -88,7 +88,8 @@
                     android:checked="true"
                     android:gravity="center"
                     android:textOff="Private"
-                    android:textOn="Public"/>
+                    android:textOn="Public"
+                    android:text="Public" />
 
             </TableRow>
 
