--- a/app/src/main/res/layout/activity_capture_media.xml
+++ b/app/src/main/res/layout/activity_capture_media.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_landing_page"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_landing_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -34,10 +34,10 @@
                 android:orientation="horizontal">
 
                 <ImageButton
+                    android:id="@+id/btn_capture"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/_cam"
-                    android:id="@+id/btn_capture" />
+                    app:srcCompat="@drawable/resource0" />
 
                 <ImageButton
                     android:id="@+id/btn_upload"
