--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,18 +58,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/menu_bar"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tab_layout">
-
-        <ProgressBar
-            android:id="@+id/home_feed_loading"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:visibility="visible"
-            tools:visibility="visible" />
-    </FrameLayout>
+        android:layout_below="@+id/tab_layout" />
 
 
 </RelativeLayout>
