--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_home"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-    android:padding="0dp"
-    android:weightSum="1"
-    tools:context="money.cache.grexActivities.HomeActivity">
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Past"/>
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Live!"/>
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Future"/>
-    </android.support.design.widget.TabLayout>
+<RelativeLayout android:id="@+id/activity_home"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="0dp"
+                android:weightSum="1"
+                tools:context="money.cache.grexActivities.HomeActivity">
 
     <RelativeLayout
         android:id="@+id/menu_bar"
@@ -51,14 +30,24 @@
             app:srcCompat="@drawable/_continue" />
     </RelativeLayout>
 
+
+    <fragment android:id="@+id/home_map_view"
+              android:name="com.google.android.gms.maps.SupportMapFragment"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_above="@+id/menu_bar"
+              tools:context=".HomeActivity"/>
     <FrameLayout
         android:id="@+id/home_feed_fragment"
         android:name="grexLayout.SpinnerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/menu_bar"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tab_layout" />
+        android:layout_alignParentStart="true">
+
+    </FrameLayout>
 
 
 </RelativeLayout>
