--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,24 +30,45 @@
             app:srcCompat="@drawable/_continue" />
     </RelativeLayout>
 
-
-    <fragment android:id="@+id/home_map_view"
-              android:name="com.google.android.gms.maps.SupportMapFragment"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_above="@+id/menu_bar"
-              tools:context=".HomeActivity"/>
-    <FrameLayout
-        android:id="@+id/home_feed_fragment"
-        android:name="grexLayout.SpinnerFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/menu_bar"
-        android:layout_alignParentStart="true">
+        android:orientation="vertical"
+        android:weightSum="1">
 
-    </FrameLayout>
+        <fragment android:id="@+id/home_map_view"
+                  android:name="com.google.android.gms.maps.SupportMapFragment"
+                  xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_above="@+id/menu_bar"
+                  android:layout_weight=".5"
+                  android:visibility="visible"
+                  tools:context=".HomeActivity"/>
+
+        <ScrollView
+            android:id="@+id/home_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:visibility="gone">
+
+            <FrameLayout
+                android:id="@+id/home_feed_fragment"
+                android:name="grexLayout.SpinnerFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/menu_bar"
+                android:layout_alignParentStart="true"
+                android:visibility="gone">
+
+            </FrameLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
