--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout android:id="@+id/activity_home"
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="0dp"
                 android:weightSum="1"
                 tools:context="money.cache.grex.HomeActivity">
-
-    <RelativeLayout
-        android:id="@+id/menu_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="@android:color/transparent"
-        android:padding="5dp">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_createRoom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:clickable="true"
-            app:elevation="11dp"
-            app:fabSize="normal"
-            app:srcCompat="@drawable/_continue" />
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,15 +17,15 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/home_map_view"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight=".5"
-            android:visibility="visible"
-            tools:context=".HomeActivity" />
+        <fragment android:id="@+id/home_map_view"
+                  android:name="com.google.android.gms.maps.SupportMapFragment"
+                  xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight=".5"
+                  android:visibility="visible"
+                  tools:context=".HomeActivity" />
 
         <RelativeLayout
             android:id="@+id/room_card_frame"
@@ -60,7 +39,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@+id/floatingActionButton"
                 android:background="@color/red"
                 android:cropToPadding="false"
                 android:elevation="12dp"
@@ -80,6 +58,38 @@
         </RelativeLayout>
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/menu_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/transparent"
+        android:padding="5dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_enterRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/_front_gate_open_48"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_createRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:visibility="gone"
+            app:elevation="11dp"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/_continue"/>
+
+
+    </FrameLayout>
 
 
 </RelativeLayout>
