--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/activity_home"
-                xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -14,13 +14,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/menu_bar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:weightSum="1">
 
-        <fragment android:id="@+id/home_map_view"
-                  android:name="com.google.android.gms.maps.SupportMapFragment"
-                  xmlns:android="http://schemas.android.com/apk/res/android"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/home_map_view"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight=".5"
@@ -37,13 +39,13 @@
             <android.support.v7.widget.AppCompatImageButton
                 android:id="@+id/close_room_card_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="22dp"
                 android:layout_alignParentEnd="true"
-                android:background="@color/red"
+                android:background="?attr/colorAccent"
                 android:cropToPadding="false"
                 android:elevation="12dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/_minus_20" />
+                app:srcCompat="@android:drawable/arrow_down_float" />
 
             <FrameLayout
                 android:id="@+id/home_feed_fragment"
@@ -59,38 +61,134 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/menu_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@android:color/transparent"
-        android:padding="5dp">
+        android:orientation="horizontal"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_home_friends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_createRoom"
+            app:layout_constraintRight_toLeftOf="@+id/btn_home_room_list"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_meeting_50"
+            tools:layout_conversion_absoluteHeight="56dp"
+            tools:layout_conversion_absoluteWidth="56dp"
+            tools:layout_conversion_absoluteX="0dp"
+            tools:layout_conversion_absoluteY="492dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_enterRoom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:visibility="gone"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="false"
+            android:visibility="invisible"
             app:fabSize="normal"
-            app:srcCompat="@drawable/_front_gate_open_48"/>
+            app:layout_constraintLeft_toRightOf="@+id/btn_home_user"
+            app:layout_constraintRight_toLeftOf="@+id/btn_home_friends"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_front_gate_open_48"
+            tools:layout_conversion_absoluteHeight="0dp"
+            tools:layout_conversion_absoluteWidth="0dp"
+            tools:layout_conversion_absoluteX="0dp"
+            tools:layout_conversion_absoluteY="492dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_createRoom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:clickable="true"
             android:visibility="visible"
             app:elevation="11dp"
             app:fabSize="normal"
-            app:srcCompat="@drawable/_continue"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_room_100"
+            tools:layout_conversion_absoluteHeight="75dp"
+            tools:layout_conversion_absoluteWidth="75dp"
+            tools:layout_conversion_absoluteX="56dp"
+            tools:layout_conversion_absoluteY="492dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_home_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_home_64"
+            tools:layout_conversion_absoluteHeight="56dp"
+            tools:layout_conversion_absoluteWidth="56dp"
+            tools:layout_conversion_absoluteX="131dp"
+            tools:layout_conversion_absoluteY="492dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_home_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.526"
+            app:layout_constraintLeft_toRightOf="@+id/btn_home_home"
+            app:layout_constraintRight_toLeftOf="@+id/btn_createRoom"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_user_64"
+            tools:layout_conversion_absoluteHeight="56dp"
+            tools:layout_conversion_absoluteWidth="56dp"
+            tools:layout_conversion_absoluteX="187dp"
+            tools:layout_conversion_absoluteY="492dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_home_room_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_bulleted_list_50" />
 
 
-    </FrameLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
 </RelativeLayout>
